Sample/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evenements-publishevenement
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    # Whitelist: 
    # nginx.ingress.kubernetes.io/whitelist-source-range: ...
spec:
  rules:
  - http:
      paths:
      - path: /Evenements/1
        pathType: Prefix
        backend:
          service: 
            name: api-evenements
            port: 
              number: 80
